Completed Part 1 - making total momentum and calculating energy of the Kaons

--- a/Week 4/LHCb_Part_1.ipynb
+++ b/Week 4/LHCb_Part_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LHCb_Part_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2Fk0rurLFTSUkXHbUM0u3"
+      "authorship_tag": "ABX9TyPXaL+GtDsFa169ctEyQpHf"
     },
     "kernelspec": {
       "name": "python2",
@@ -294,6 +294,127 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4e4n4iS3IJZi",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Why are we here?\n",
+        "\n",
+        "This week is about finding out something about one of the fundemental questions in physics. Why do we have \"stuff\".\n",
+        "\n",
+        "According to many of our models, and according to many measurements in particle physics, matter and anti-matter appear to be produced in equal quantities.\n",
+        "\n",
+        "However, when one looks at the Universe in general, we have more matter than anti-matter left - so there need to be some processes where anti-matter and matter are not produced equally. You can find out more about the Matter/Anti-Matter Asymmetry [here](http://press.web.cern.ch/backgrounders/matterantimatter-asymmetry)\n",
+        "\n",
+        "One place we look for this asymetry is in [charge-partity (CP) violation](https://www.symmetrymagazine.org/article/october-2005/explain-it-in-60-seconds) in particle physics processes. This essentially says that the processes that happen in the anti-particle version of a decay do not **exactly** match to the processes that happen in the particle version of the decay.\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "At LHCb, we produce both particle of the  B<sup>+</sup> meson and it's antiparticle the B<sup>-</sup> meson.\n",
+        "\n",
+        "We cannot detect these mesons directly. They decay into other things before we have a chance to measure them properly. So we collect data on the decay products, often called daughter particles. There are 524 [documented](http://pdg.lbl.gov/2014/listings/rpp2014-list-B-plus-minus.pdf) ways that the B<sup>+/-</sup> decays into various combinations. In order to simplify the process, we choose decay combinations that are convenient or have particular properties.\n",
+        "\n",
+        "In this analysis, we will take the process:-\n",
+        "\n",
+        "B<sup>+</sup>->K<sup>+</sup> + K<sup>+</sup>  + K<sup>-</sup>\n",
+        "\n",
+        "or\n",
+        "\n",
+        "B<sup>-</sup>->K<sup>-</sup> + K<sup>-</sup>  + K<sup>+</sup>\n",
+        "\n",
+        "\n",
+        "To do so, we are given the following data for each event in our system:-\n",
+        "\n",
+        "![alt text](https://raw.githubusercontent.com/lhcb/opendata-project/80d64a3796e593fc8f9b257e85f32ae2e54f131f/Images/Variables.png)\n",
+        "\n",
+        "Here, H1 is the detected daughter particle (so a Kaon or a Pion), **not** the B-meson - the mother particle. We have to use some detective work to extract the information we need on the original physics process at play.\n",
+        "\n",
+        "\n",
+        "Let's get started with working with this data:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LOhfj7kfP-ao",
+        "colab_type": "text"
+      },
+      "source": [
+        "For our analysis, the momentum of each of the daughter particles is split into the three cartesian components. We need to first combine this into a single measurement"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y4keyoyTPjsK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#We need to tell Python what the total momentum is defined as mathematically - do that in this code block:\n",
+        "\n",
+        "#Hint: I suggest we define a function which we might want to use later - something like:\n",
+        "\n",
+        "def p_tot_daughter(daughter)\n",
+        "  p_tot=sqrt((daughter+\"_PX\")**2+ .... etc \n",
+        "  return p_tot\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C1lXLMCoR1Gi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now plot the total momentum for one (or more) of the daughter particles."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6kdbiNpPR1QG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#use the histogram plotting tools, call your function to find the total momentum and then plot it!"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Gj5qv5kqSMIF",
+        "colab_type": "text"
+      },
+      "source": [
+        "The next step is to use the total momentum of the Kaon and its invarient mass (found with a small amount of research) and your relativity knowledge to get an equation for the energy of the Kaon. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QMkih_6SSG8I",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#let's make a function to find the energy of a Kaon, if you add in the total momentum found in the previous steps - you should be able to do so reasonably easily"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
