Corrected a few bugs in part 1- final version for 2020

--- a/Week 4/LHCb_Part_1.ipynb
+++ b/Week 4/LHCb_Part_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LHCb_Part_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPXaL+GtDsFa169ctEyQpHf"
+      "authorship_tag": "ABX9TyNIbzYE+XKJz3+pI2jc1tOd"
     },
     "kernelspec": {
       "name": "python2",
@@ -110,9 +110,9 @@
         "\n",
         "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libHist.so')\n",
         "\n",
-        "#ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf.so')\n",
+        "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf.so')\n",
         "\n",
-        "#ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf3d.so')\n",
+        "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf3d.so')\n",
         "\n",
         "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libMultiProc.so')\n",
         "\n",
@@ -400,7 +400,9 @@
         "colab_type": "text"
       },
       "source": [
-        "The next step is to use the total momentum of the Kaon and its invarient mass (found with a small amount of research) and your relativity knowledge to get an equation for the energy of the Kaon. "
+        "The next step is to use the total momentum of the Kaon and its invarient mass. You can research the mass of the Kaon in literature and then use:\n",
+        "\n",
+        "$E^2=(pc)^2+(m_0c^2)^2$"
       ]
     },
     {
@@ -415,6 +417,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w3sqwtNTUEJd",
+        "colab_type": "text"
+      },
+      "source": [
+        "We have now completed the initial steps and begun to work through what we need to with the data. This workflow is divided into 4 stages, just for easier viewing and comprehension."
+      ]
     }
   ]
 }
