Corrected a few bugs in part 2- final version for 2020

--- a/Week 4/LHCb_Part_2.ipynb
+++ b/Week 4/LHCb_Part_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LHCb_Part_2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNIscKRI9kgEdZNntExqxFD"
+      "authorship_tag": "ABX9TyOr+Gs05oJHJzWgds6vOb/Y"
     },
     "kernelspec": {
       "name": "python3",
@@ -289,7 +289,7 @@
       },
       "source": [
         "#Now to plot it all\n",
-        "c1=ROOT.TCanva(\"c1\",\"c1\")\n",
+        "c1=ROOT.TCanvas(\"c1\",\"c1\")\n",
         "frame=mass.frame()\n",
         "data_to_fit.plotOn(frame)\n",
         "model.plotOn(frame, ROOT.RooFit.Components(\"Gauss\"),ROOT.RooFit.LineColor(8),ROOT.RooFit.LineStyle(2))\n",
