Corrected a few bugs in part 3- final version for 2020

--- a/Week 4/LHCb_Part_3.ipynb
+++ b/Week 4/LHCb_Part_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LHCb_Part_3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPg4ZfdWomlBBzee7YH76GC"
+      "authorship_tag": "ABX9TyMQgzwiz7Z7WOD1SLmYgL1h"
     },
     "kernelspec": {
       "name": "python3",
@@ -147,7 +147,7 @@
         "colab": {}
       },
       "source": [
-        "#Then, ensuring you're still taking the data after the selection, make a Dalitz plot. This is a 2-D scatter plot (use e.g. hist2d to make the plot)\n",
+        "#Then, ensuring you're still taking the data after the selection, make a Dalitz plot. This is a 2-D scatter plot (use e.g. TH2F to make the plot where we used TH1F before)\n",
         "#Choose an appropriate binning in your scatter "
       ],
       "execution_count": 0,
