--- a/Week 4/LHCb_Part_1.ipynb
+++ b/Week 4/LHCb_Part_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LHCb_Part_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbLqgit0ZfJ7PPJipYRQky"
+      "authorship_tag": "ABX9TyOD4hBX+8Ksa4W+wwycbUim"
     },
     "kernelspec": {
       "name": "python2",
@@ -83,9 +83,9 @@
         "\n",
         "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libHist.so')\n",
         "\n",
-        "#ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf.so')\n",
+        "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf.so')\n",
         "\n",
-        "#ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf3d.so')\n",
+        "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libGraf3d.so')\n",
         "\n",
         "ctypes.cdll.LoadLibrary('/content/APPS/root/lib/libMultiProc.so')\n",
         "\n",
