--- a/LHCb 2024 Colab.ipynb
+++ b/LHCb 2024 Colab.ipynb
@@ -30,31 +30,12 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "vFclIR72w0mU",
-        "collapsed": true
-      },
-      "source": [
-        "In the Terminal run the following:\n",
-        "\n",
-        "conda config --set channel_priority strict\n",
-        "conda create -c conda-forge --name my-root-env root\n",
-        "\n",
-        "Then return to the launcher and you should see \"Python [Conda env: my-root-env]\"\n",
-        "\n",
-        "Then open the Jupyter notebook for this week and go Kernal -> Change Kernal -> select \"Python [Conda env: my-root-env]\""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "#run this once per kernal crash\n",
         "!wget https://github.com/MohamedElashri/ROOT/releases/download/ubuntu/root_v6.28.04_Ubuntu_20.04.zip\n",
         "!unzip /content/root_v6.28.04_Ubuntu_20.04.zip\n",
         "!apt-get install git dpkg-dev cmake g++ gcc binutils libx11-dev libxpm-dev libxft-dev libxext-dev tar gfortran subversion\n",
-        "!apt-get inatall libpython3.6-dev"
+        "!apt-get install libpython3.6-dev"
       ],
       "metadata": {
         "id": "RJbV2SbQsbfE"
